--- a/views/createBill.hbs
+++ b/views/createBill.hbs
@@ -1,21 +1,23 @@
 <div class="row justify-content-center">
     <div class="col-sm-4">
-        
-        <form action="/bills/create" method="post">
-                <h2 class="justify-content-center">Add a bill that you want tracked</h2>
-                Title
-                <input type = "text" name="title" placeholder="Title"></input>
-                Description
-                <input type= = "text" class='form-control' name="description" placeholder="description"></input>
-                Amount
-                <input type= = "number" class='form-control' name="amount" placeholder="amount"></input>
-                Due Date
-                <input type= = "date" class='form-control' name="due_date" ></input>
-
-                <div class="text-right">
-                <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
+        <form action="/create" method="post" id="billform">
+            <div class="mb-3">
+                <label for="title" class="form-label">Name of the bill:</label>
+                <input type="text" class="form-control" name="title" id="title">
+            </div>
+            <div class="mb-3">
+                <label for="description" class="form-label">What is this bill for?</label>
+                <input type="text" class="form-control" name="description" id="description">
+            </div>
+            <div class="mb-3">
+                <label for="amount" class="form-label">Bill Amount: $</label>
+                <input type="number" class="form-control" name="amount" id="amount">
+            </div>
+            <div class="mb-3">
+                <label for="due_date" class="form-label">Full Payment Due Date</label>
+                <input type="date" class="form-control" name="due_date" id="due_date">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
-
     </div>
 </div>
