--- a/views/showBill.hbs
+++ b/views/showBill.hbs
@@ -1,11 +1,13 @@
-<div class="row">
-  <div class="col-sm-6 col-sm-offset-3">
-    <div class="lead">
+<div class="row justify-content-center">
+  <div class="col-4">
+    <div class="lead justify-content-center">
       <a href="/bills/{{{data._id}}}">{{{data.title}}}</a>
     </div>
-    <p>{{{data.description}}}</p>
-    <p>{{{data.amount}}}</p>
-    <form action = "/bills/{{{data._id}}}?_method=PUT", method="post">
+    <p>Bill description: {{{data.description}}}</p>
+    <p>${{{data.amount}}} is the amount left to be paid</p>
+    <p>This bill must be paid by: {{{data.due_date}}}</p>
+
+    {{!-- <form action = "/bills/{{{data._id}}}?_method=PUT", method="post">
         <div class="form-group">
           <label for="title">title</label>
           <input type="text" name="topic" class="form-control" id="card-topic">
@@ -14,10 +16,9 @@
           <label for="card-exercises">Exercises</label>
           <input type="text" name="exercises" class="form-control" id="card-exercises">
         </div>
-
         <div class='text-right'>
           <button type="submit" class="btn btn-primary">Update bill</button>
         </div>
-    </form>
+    </form> --}}
   </div>
 </div>
