--- a/views/allBills.hbs
+++ b/views/allBills.hbs
@@ -5,6 +5,7 @@
                 <p>{{this.description}}</p>
                 <p>${{this.amount}}</p>
                 <p>{{this.due_date}}</p>
+                <a href="/bills/{{this._id}}">Update bill</a>
             </div>
             {{/each}}
 </div>
