--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -15,10 +15,10 @@
           <a class="nav-link" href="/create">Add a bill</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/create">Update your bill</a>
+          <a class="nav-link active" aria-current="page" href="/signup">Sign Up</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/create">Add a bill</a>
+          <a class="nav-link active" aria-current="page" href="/login">Log In</a>
         </li>
       </ul>
     </div>
