--- a/views/email.hbs
+++ b/views/email.hbs
@@ -6,10 +6,18 @@
 </head>
 <body>
     <div class="lead justify-content-center">
+    <p>This is a reminder to pay the bill that you just added ASAP!</p>
+</body>
+</html>
+
+
+
+{{!-- 
+<body>
+    <div class="lead justify-content-center">
      {{bill.title}}
     </div>
     <p>Bill description: {{bill.description}}</p>
     <p>${{bill.amount}} is the amount left to be paid</p>
     <p>This bill must be paid by: {{bill.due_date}}</p>
-</body>
-</html>
+</body> --}}
