--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/bootstrap/js/bootstrap.min.js" />
     <title>Pay On Track</title>
 </head>
-<body>
+<body class= "bg-dark">
     {{> navbar}}
     {{{body}}}
     {{> footer}}
