--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,4 +1,4 @@
-<div class="row justify-content-center">
+<div class="row justify-content-center text-info">
     <div class="col-sm-4">
         <form action="/signup" method="post" id="signupform">
             <div class="mb-3">
