--- a/views/createBill.hbs
+++ b/views/createBill.hbs
@@ -1,4 +1,4 @@
-<div class="row justify-content-center">
+<div class="row justify-content-center text-info">
     <div class="col-sm-4">
         <form action="/create" method="post" id="billform">
             <div class="mb-3">
