--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,4 +1,4 @@
-<div class="row justify-content-center">
+<div class="row justify-content-center text-info">
     <div class="col-sm-4">
         <form action="/login" method="post" id="loginform">
             <div class="mb-3">
