--- a/views/showBill.hbs
+++ b/views/showBill.hbs
@@ -1,4 +1,4 @@
-<div class="row justify-content-center">
+<div class="row justify-content-center text-info">
   <div class="col-4">
     <div class="lead justify-content-center">
       <a href="/bills/{{data._id}}">{{data.title}}</a>
@@ -28,7 +28,6 @@
     </form>
 
     <form action = "/bills/{{data._id}}?_method=DELETE" method = "post">
-     <!-- <form action="/delete/{{card._id}}" method="post" >    form(action=`/cards/${pet._id}?_method=DELETE`, method="POST")-->
       <input type="hidden" name="_method" value="delete">
       <button type="submit">Delete Bill</button>
     </form>
