Styling and implemented interest calculator

--- a/views/createBill.hbs
+++ b/views/createBill.hbs
@@ -6,7 +6,16 @@
                 <input type="text" class="form-control" name="title" id="title">
             </div>
             <div class="mb-3">
-                <label for="description" class="form-label">What is this bill for?</label>
+                <label for="type" class="form-label">Bill type:</label>
+                <select id="type" name="type">
+                    <option >Credit Card</option>
+                    <option >Personal Loan</option>
+                    <option >Student Loan</option>
+                    <option >Other</option>
+                </select>
+            </div>
+            <div class="mb-3">
+                <label for="description" class="form-label">Bill Desription: </label>
                 <input type="text" class="form-control" name="description" id="description">
             </div>
             <div class="mb-3">
