--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,6 +1,6 @@
-<div class="row text-info bg-dark">
+<div class="row">
   <div class="px-4 py-5 my-5 text-center">
-    <h1 class="display-5 fw-bold">WELCOME TO PAY ON TRACK!</h1>
+    <h1 class="welcome-mess display-5 fw-bold">WELCOME TO PAY ON TRACK!</h1>
   <div class="col-lg-6 mx-auto">
     <p class="lead mb-4">Keep a close eye on your bills and take charge of paying them off on time. We know sometimes we forget about them but that's why we're here to help. Help you stay on track and pay on track.</p>
   <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
@@ -11,7 +11,7 @@
   </div>
   </div>
 </div>
-<div class="row bg-dark text-info">
+<div class="row">
     <div class="col-12 text-center">
         <h1>What is PayOnTrack?</h1>
         <p>Here is a tool that is going to help you commit & stay on track to paying your bills and killing any debt while keeping track of it the whole way down!</p>
