--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/bootstrap/js/bootstrap.min.js" />
+    <link rel="stylesheet" href="/css/all.css">
     <title>Pay On Track</title>
 </head>
-<body class= "bg-dark">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<body>
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
         
@@ -25,6 +26,9 @@
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="/create">Add a bill</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="/calculator">Use interest calculator</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/logout">Log Out</a>
