--- a/views/allBills.hbs
+++ b/views/allBills.hbs
@@ -1,4 +1,4 @@
-<div class="row bg-dark text-info text-center">
+<div class="row text-center">
             {{#each data}}
             <div class="row">
                 <h2>{{this.title}}</h2>
@@ -9,6 +9,6 @@
             </div>
             {{/each}}
 </div>
-<div class="row bg-dark">
+<div class="row">
     <a href="#">Send a reminder with your bills!</a>
 </div>
