--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,15 +1,15 @@
-<div class="row justify-content-center text-info">
-    <div class="col-sm-4">
+<div class="row justify-content-center">
+    <div class="login-up-form col-sm-4">
         <form action="/login" method="post" id="loginform">
             <div class="mb-3">
                 <label for="username" class="form-label">Enter your username: </label>
-                <input type="text" class="form-control" name="username" id="username">
+                <input type="text" class="form-control" name="username" id="username" placeholder="Username">
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Enter your password: </label>
-                <input type="text" class="form-control" name="password" id="password">
+                <input type="password" class="form-control" name="password" id="password" placeholder="Password">
+                <button type="submit" class="btn btn-primary mt-3">Log In</button>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
 </div>
