--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,20 +1,19 @@
-<div class="row justify-content-center text-info">
-    <div class="col-sm-4">
+<div class="row justify-content-center">
+    <div class="login-up-form col-sm-4">
         <form action="/signup" method="post" id="signupform">
             <div class="mb-3">
                 <label for="username" class="form-label">Enter a username: </label>
-                <input type="text" class="form-control" name="username" id="username">
+                <input type="text" class="form-control" name="username" id="username" placeholder="Username">
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Enter a password: </label>
-                <input type="text" class="form-control" name="password" id="password">
+                <input type="password" class="form-control" name="password" id="password" placeholder="Password">
             </div>
             <div class="mb-3">
                 <label for="passwordVerify" class="form-label">Please reenter password: </label>
-                <input type="text" class="form-control" name="passwordVerify" id="passwordVerify">
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-            
+                <input type="password" class="form-control" name="passwordVerify" id="passwordVerify" placeholder="Password">
+                <button type="submit" class=" mt-3 btn btn-primary">Submit</button>
+            </div>            
         </form>
     </div>
 </div>
