implemented monthly interest calculator and fixed bill creation bug

--- a/views/createBill.hbs
+++ b/views/createBill.hbs
@@ -1,9 +1,9 @@
-<div class="row justify-content-center text-info">
-    <div class="col-sm-4">
+<div class="row justify-content-center">
+    <div class="col-sm-4 login-up-form">
         <form action="/create" method="post" id="billform">
             <div class="mb-3">
                 <label for="title" class="form-label">Name of the bill:</label>
-                <input type="text" class="form-control" name="title" id="title">
+                <input type="text" class="form-control" name="title" id="title" placeholder="Best Buy Credit Card">
             </div>
             <div class="mb-3">
                 <label for="type" class="form-label">Bill type:</label>
@@ -16,17 +16,18 @@
             </div>
             <div class="mb-3">
                 <label for="description" class="form-label">Bill Desription: </label>
-                <input type="text" class="form-control" name="description" id="description">
+                <input type="text" class="form-control" name="description" id="description" placeholder="Credit card bill from laptop purchase at best buy">
             </div>
             <div class="mb-3">
                 <label for="amount" class="form-label">Bill Amount: $</label>
-                <input type="number" class="form-control" name="amount" id="amount">
+                <input type="number" class="form-control" name="amount" id="amount" placeholder="1,200">
             </div>
             <div class="mb-3">
                 <label for="due_date" class="form-label">Full Payment Due Date</label>
                 <input type="date" class="form-control" name="due_date" id="due_date">
+                <button type="submit" class="btn btn-primary mt-3">Create bill</button>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            
         </form>
     </div>
 </div>
