--- a/views/interestCalculator.hbs
+++ b/views/interestCalculator.hbs
@@ -2,19 +2,41 @@
     function calculateInterest() {
         var amount = document.getElementById("amount").value;
         var interest_rate = document.getElementById("interest_rate").value;
+        var years = document.getElementById("years").value;
+        var simpleInterest = (amount*interest_rate/100) * years;
+        var total = eval(amount) + eval(simpleInterest);
+        document.getElementById("sampleinter").innerHTML = "Sample Interest = $" + simpleInterest;
+        document.getElementById("total").innerHTML = "Total bill amount = $" + total;
+    }
+    function calculateMonthlyInterest() {
+        var totalAmount = document.getElementById("totalAmount").value;
+        var monthly_interest_rate = document.getElementById("monthly_interest_rate").value;
         var months = document.getElementById("months").value;
-        var interest = (amount * (interest_rate / 100)) / 12;
-        var totalPayment = ((amount + interest) * months).toFixed(2);
-        document.getElementById("payment").innerHTML = "Monthly Payment = $" + totalPayment;
+        var simpleMonthlyInterest = (totalAmount*monthly_interest_rate/100) * (months/12).toFixed(2);
+        var totalAfterMonths = eval(totalAmount) + eval(simpleMonthlyInterest);
+        document.getElementById("sampleintermonth").innerHTML = "Sample Interest = $" + simpleMonthlyInterest;
+        document.getElementById("totalmonth").innerHTML = "Total bill amount = $" + totalAfterMonths;
     }
 </script>
 <div class="row justify-content-center text-center">
     <div class="interest-calc col-6">
 
-        <h1>Interest Calculator</h1>
+        <h1>Yearly Simple Interest Calculator</h1>
         <p>Bill Amount: $<input id="amount" type="number" min="1" max="1000000" onchange="calculateInterest()"></p>
-        <p>Interest Rate: <input id="interest_rate" type="number" min="0" max="100" value="10" step=".1" onchange="calculateInterest()">%</p>
-        <p>Months you will take to repay: <input id="months" type="number" min="1" max="72" value="1" onchange="calculateInterest()"></p>
-        <h2 id="payment"></h2>
+        <p>Interest Rate(Yearly): <input id="interest_rate" type="number" min="0" max="100" value="10" step=".1" onchange="calculateInterest()">%</p>
+        <p>Years you will take to repay: <input id="years" type="number" min="1" max="72" value="1" onchange="calculateInterest()"></p>
+        <h2 id="sampleinter"></h2>
+        <h2 id="total"></h2>
+    </div>
+</div>
+<div class="row justify-content-center text-center mt-5">
+    <div class="interest-calc col-6">
+
+        <h1>Monthly Simple Interest Calculator</h1>
+        <p>Bill Amount: $<input id="totalAmount" type="number" min="1" max="1000000" onchange="calculateMonthlyInterest()"></p>
+        <p>Interest Rate(Monthly): <input id="monthly_interest_rate" type="number" min="0" max="100" value="10" step=".1" onchange="calculateMonthlyInterest()">%</p>
+        <p>Months you will take to repay: <input id="months" type="number" min="1" max="72" value="1" onchange="calculateMonthlyInterest()"></p>
+        <h2 id="sampleintermonth"></h2>
+        <h2 id="totalmonth"></h2>
     </div>
 </div>
