added functioning filters and styling as well

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -15,7 +15,7 @@
     <div class="col-12 text-center">
         <h1>What is PayOnTrack?</h1>
         <p>Here is a tool that is going to help you commit & stay on track to paying your bills and killing any debt while keeping track of it the whole way down!</p>
-        <p>
+        <img src="/images/creditcards.png" alt="" width="500" height="500" style="border: 2px inset black;">
     </div>
     <div class="col-12 text-center">
         <h1>How does it work? </h1>
