--- a/views/allBills.hbs
+++ b/views/allBills.hbs
@@ -1,14 +1,18 @@
+<div class="row">
+    <a href="#">Send a reminder with your bills!</a>
+    <a class="nav-link" href="/sortedbills">Bills from lowest to highest</a>
+    <a class="nav-link" href="/creditbills">Credit Card bills</a>
+    <a class="nav-link" href="/personalbills">Personal loan bills</a>
+</div>
 <div class="row text-center">
             {{#each data}}
             <div class="row">
                 <h2>{{this.title}}</h2>
+                <p>Bill type: {{this.type}}</p>
                 <p>Bill description: {{this.description}}</p>
                 <p>Amount due: ${{this.amount}}</p>
                 <p>This bill is due on{{this.due_date}}</p>
                 <a href="/bills/{{this._id}}">Update bill</a>
             </div>
             {{/each}}
-</div>
-<div class="row">
-    <a href="#">Send a reminder with your bills!</a>
 </div>
