--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -2,8 +2,8 @@
     <div class="login-up-form col-sm-4">
         <form action="/signup" method="post" id="signupform">
             <div class="mb-3">
-                <label for="username" class="form-label">Enter a username: </label>
-                <input type="text" class="form-control" name="username" id="username" placeholder="Username">
+                <label for="username" class="form-label">Enter your email: </label>
+                <input type="text" class="form-control" name="username" id="username" placeholder="johndoe@example.com">
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Enter a password: </label>
