--- a/public/css/all.css
+++ b/public/css/all.css
@@ -1,5 +1,5 @@
 .welcome-mess {
-    color: rgb(74, 74, 233);
+    color: rgb(98, 26, 139);
     font-family: Arial, Helvetica, sans-serif;
 
 }
@@ -15,15 +15,21 @@ body {
 }
 
 .interest-calc{
-    color: rgb(74, 74, 233);
+    color: rgb(98, 26, 139);
     border-radius: 25px;
     border-style:2px solid;
     box-shadow: 6px 6px ;
 }
 
 .login-up-form{
-    color: rgb(74, 74, 233);
+    color: rgb(98, 26, 139);
     border-radius: 25px;
     border-style:2px solid;
     box-shadow: 6px 6px;
+}
+a:active {
+    color: rgb(98, 26, 139);
+}
+.home-titles {
+    color: rgb(98, 26, 139);
 }
