--- a/views/showBill.hbs
+++ b/views/showBill.hbs
@@ -27,13 +27,13 @@
         <div class="mb-3">
             <label for="due_date" class="form-label">Full Payment Due Date</label>
             <input type="date" class="form-control" name="due_date" id="due_date" value="{{data.due_date}}">
-            <button type="submit" class="btn btn-outline-success btn-lg px-4 mt-3">Update bill</button>
+            <button type="submit" class="btn btn-warning btn-lg px-4 mt-3">Update bill</button>
         </div>
     </form>
   {{!-- <button type="button" class="btn btn-outline-success btn-lg px-4">Read More</button> --}}
     <form action = "/bills/{{data._id}}?_method=DELETE" method = "post">
       <input type="hidden" name="_method" value="delete">
-      <button class="mb-3" type="submit">Delete Bill</button>
+      <button class="mb-3 btn btn-danger" type="submit">Delete Bill</button>
     </form>
   </div>
 </div>
