--- a/views/interestCalculator.hbs
+++ b/views/interestCalculator.hbs
@@ -17,6 +17,25 @@
         document.getElementById("sampleintermonth").innerHTML = "Sample Interest = $" + simpleMonthlyInterest;
         document.getElementById("totalmonth").innerHTML = "Total bill amount = $" + totalAfterMonths;
     }
+    function calculateCompoundMonthlyInterest() {
+        var total_Amount = Number(document.getElementById("com_total_amount").value);
+        var monthlyInterestRate = Number(document.getElementById("com_monthly_interest_rate").value) * 1;
+        var payPeriod = Number(document.getElementById("pay_period").value);
+        var compoundMonths = Number(document.getElementById("com_months").value);
+
+        console.log(total_Amount);
+        console.log(monthlyInterestRate);
+        console.log(compoundMonths);
+        console.log(payPeriod);
+        var exponent = compoundMonths * payPeriod
+        {{!-- var compoundMonthlyInterest = (total_Amount + (1 + (monthlyInterestRate / compoundMonths) ** (compoundMonths * payPeriod))).toFixed(2); --}}
+        var compoundMonthlyInterest = (total_Amount + ((1 + (monthlyInterestRate / compoundMonths)) ** (exponent))).toFixed(2);
+        
+
+        console.log(compoundMonthlyInterest);
+
+        document.getElementById("totalCompoundMonth").innerHTML = "Total bill amount = $" + compoundMonthlyInterest;
+    }
 </script>
 <div class="row justify-content-center text-center">
     <div class="interest-calc col-6">
@@ -38,5 +57,16 @@
         <p>Months you will take to repay: <input id="months" type="number" min="1" max="72" value="1" onchange="calculateMonthlyInterest()"></p>
         <h2 id="sampleintermonth"></h2>
         <h2 id="totalmonth"></h2>
+    </div>
+</div>
+<div class="row justify-content-center text-center mt-5">
+    <div class="interest-calc col-6">
+
+        <h1>Monthly Compound Interest Calculator</h1>
+        <p>Bill Amount: $<input id="com_total_amount" type="number" min="1" max="1000000" onchange="calculateCompoundMonthlyInterest()"></p>
+        <p>Interest Rate(Monthly): <input id="com_monthly_interest_rate" type="number" min="0" max="100" value="10" step=".1" onchange="calculateCompoundMonthlyInterest()">%</p>
+        <p>Monnths you have to repay: <input id="pay_period" type="number" min="1" max="71" value="1" onchange="calculateCompoundMonthlyInterest()"></p>
+        <p>Number of times interest applied:  <input id="com_months" type="number" min="1" max="72" value="1" onchange="calculateCompoundMonthlyInterest()"></p>
+        <h2 id="totalCompoundMonth"></h2>
     </div>
 </div>
