cleaned up styling and removed some content

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,31 +1,26 @@
-<div class="row">
+<div class="welcome-mess row">
   <div class="px-4 py-5 my-5 text-center">
-    <h1 class="welcome-mess display-5 fw-bold">WELCOME TO PAY ON TRACK!</h1>
+    <h1 class="display-5 fw-bold">All Your Bills Due Under One Window</h1>
   <div class="col-lg-6 mx-auto">
-    <p class="lead mb-4">Keep a close eye on your bills and take charge of paying them off on time. We know sometimes we forget about them but that's why we're here to help. Help you stay on track and pay on track.</p>
+    <p class="lead mb-4">Take pride in paying all your bills on time. The tool to help you organize your payments while really seeing how much you owe. 
+      Here to help you stay on track & pay on track.
+    </p>
   <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-    <a href="/signup" class="btn btn-warning btn-lg px-4 gap-3">Sign Up</a>
-    {{!-- <button type="button" class="">Sign up</button> --}}
-    <button type="button" class="btn btn-outline-warning btn-lg px-4">Read More</button>
+    <a href="/signup" class="btn btn-warning btn-lg px-4 gap-3">Join Us</a>
   </div>
   </div>
   </div>
 </div>
-<div class="row">
-    <div class="col-12 text-center">
-        <h1 class="home-titles">What is PayOnTrack?</h1>
-        <p>Here is a tool that is going to help you commit & stay on track to paying your bills and killing any debt while keeping track of it the whole way down!</p>
-        <img src="/images/creditcards.png" alt="" width="500" height="500" style="border: 2px inset rgb(255, 244, 97);">
-    </div>
-    <div class="col-12 text-center">
-        <h1 class="home-titles">How does it work? </h1>
+<div class="homeInfo row justify-content-center">
+    <div class="col-5 text-center">
+        <h1> How does it work? </h1>
         <p>You simply add a bill that needs to be paid off, with the amount and due date information.</p>
         <p>You can then take a look at all your bills that you've added to keep track </p>
     </div>
-    <div class="col-12 text-center">
-        <h1 class="home-titles">Curious about the interest on your bills? </h1>
+    <div class="col-5 text-center">
+        <h1>Curious about the interest on your bills? </h1>
         <p>When signing up, you have access to the interest calculator which will help you figure out how much you'll be paying overall yearly or monthly.</p>
-        <img src="/images/calculator.png" alt="" width="500" height="500" style="border: 2px inset rgba(241, 238, 45, 0.829);">
+        <img src="/images/calculator.png" alt="" width="500" height="500" style="border: 2px inset rgba(236, 235, 225, 0.829);">
     </div>
 </div>
 
