--- a/public/css/all.css
+++ b/public/css/all.css
@@ -1,21 +1,40 @@
-.welcome-mess {
-    color: rgb(98, 26, 139);
-    font-family: Arial, Helvetica, sans-serif;
 
+/* HOME.HBS STYLING */
+
+.welcome-mess h1 {
+    color: #000000;
 }
+
+.welcome-mess {
+    background-color: white;
+    font-family: 'Bricolage Grotesque', sans-serif;    
+}
+.homeInfo {
+    background-color: white;
+    font-family: 'Bricolage Grotesque', sans-serif; 
+}
+
+
+/*  */
 body {
-    background-color:white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color:rgb(241, 194, 65);
     font-size:larger;
     color: rgb(0, 0, 0);
 }
-.spec-nav {
-    color: salmon;
-    background-color: salmon;
+.mainNav{
+    background-color: rgb(241, 194, 65);
+    height: 60px;
+}
+
+.nav-link {
+    color: #000000;
+}
+.nav-link:hover {
+    color: white;
 }
 
 .interest-calc{
-    color: rgb(98, 26, 139);
+    color: rgb(0, 0, 0);
     border-radius: 25px;
     border-style:2px solid;
     box-shadow: 6px 6px ;
@@ -28,8 +47,5 @@ body {
     box-shadow: 6px 6px;
 }
 a:active {
-    color: rgb(98, 26, 139);
-}
-.home-titles {
     color: rgb(98, 26, 139);
 }
