--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -9,45 +9,46 @@
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/bootstrap/js/bootstrap.min.js" />
     <link rel="stylesheet" href="/css/all.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@10..48,200;10..48,300;10..48,400&family=Rock+Salt&display=swap" rel="stylesheet">
     <title>Pay On Track</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">
+        <div class="row mainNav container-fluid">
+            <div class="col-6"> 
+                <a class="nav-link" aria-current="page" href="/">
                     <img src="/images/yellowpay.png" width="100" height="100"  alt="">
+                    Pay-On-Track
                 </a>
-                </li>
-                <li class="nav-item mt-4">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
-                </li>
-                {{#if currentUser}}
-                <li class="nav-item mt-4">
-                <a class="nav-link" href="/allbills">See all bills</a>
-                </li>
-                <li class="nav-item mt-4">
-                <a class="nav-link" href="/create">Add a bill</a>
-                </li>
-                <li class="nav-item mt-4">
-                <a class="nav-link" href="/calculator">Use interest calculator</a>
-                </li>
-                <li class="nav-item mt-4">
-                <a class="nav-link active" aria-current="page" href="/logout">Log Out</a>
-                </li>
-                {{else}}
-                <li class="nav-item mt-4">
-                <a class="nav-link active" aria-current="page" href="/signup">Sign Up</a>
-                </li>
-                <li class="nav-item mt-4">
-                <a class="nav-link active" aria-current="page" href="/login">Log In</a>
-                </li>
-                {{/if}}
-            </ul>
             </div>
+            <div class="col-4 align-items-end">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    {{#if currentUser}}
+                    <li class="nav-item mt-2">
+                        <a class="nav-link" href="/allbills">See all bills</a>
+                    </li>
+                    <li class="nav-item mt-2">
+                        <a class="nav-link" href="/create">Add a bill</a>
+                    </li>
+                    <li class="nav-item mt-2">
+                        <a class="nav-link" href="/calculator">Use interest calculator</a>
+                    </li>
+                    <li class="nav-item mt-2">
+                        <a class="nav-link active" aria-current="page" href="/logout">Log Out</a>
+                    </li>
+                    {{else}}
+                    <li class="nav-item mt-2">
+                        <a class="nav-link active" aria-current="page" href="/signup">Sign Up</a>
+                    </li>
+                    <li class="nav-item mt-2">
+                        <a class="nav-link active" aria-current="page" href="/login">Log In</a>
+                    </li>
+                    {{/if}}
+                </ul>
+            </div>
+            
         </div>
     </nav>
     {{{body}}}
