--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,7 +1,7 @@
 <div class="row justify-content-center">
     <div class="login-up-form col-sm-4">
         <form action="/signup" method="post" id="signupform">
-            <div class="mb-3">
+            <div class="mb-3 mt-3" >
                 <label for="username" class="form-label">Enter your email: </label>
                 <input type="text" class="form-control" name="username" id="username" placeholder="johndoe@example.com">
             </div>
@@ -12,8 +12,10 @@
             <div class="mb-3">
                 <label for="passwordVerify" class="form-label">Please reenter password: </label>
                 <input type="password" class="form-control" name="passwordVerify" id="passwordVerify" placeholder="Password">
-                <button type="submit" class=" mt-3 btn btn-primary">Submit</button>
-            </div>            
+            </div>
+            <div class=" mb-3 text-center">
+                <button type="submit" class="submitButton mt-3 ">Submit</button>
+            </div>
         </form>
     </div>
 </div>
