--- a/views/createBill.hbs
+++ b/views/createBill.hbs
@@ -1,7 +1,7 @@
 <div class="row justify-content-center">
     <div class="col-sm-4 login-up-form">
         <form action="/create" method="post" id="billform">
-            <div class="mb-3">
+            <div class="mb-3 mt-3">
                 <label for="title" class="form-label">Name of the bill:</label>
                 <input type="text" class="form-control" name="title" id="title" placeholder="Best Buy Credit Card">
             </div>
@@ -25,7 +25,10 @@
             <div class="mb-3">
                 <label for="due_date" class="form-label">Full Payment Due Date</label>
                 <input type="date" class="form-control" name="due_date" id="due_date">
-                <button type="submit" class="btn btn-primary mt-3">Create bill</button>
+                
+            </div>
+            <div class="mb-3 text-center">
+                <button type="submit" class="submitButton mt-3">Create bill</button>
             </div>
             
         </form>
