--- a/views/allBills.hbs
+++ b/views/allBills.hbs
@@ -8,12 +8,16 @@
 <div class="row text-center">
             {{#each data}}
             <div class="col-6 login-up-form mt-3">
-                <h2>{{this.title}}</h2>
-                <p>Bill type: {{this.type}}</p>
-                <p>Bill description: {{this.description}}</p>
-                <p>Amount due: ${{this.amount}}</p>
-                <p>This bill is due on: {{this.due_date}}</p>
-                <a href="/bills/{{this._id}}">Update bill</a>
+                <div class="mt-3">
+                    <h2>{{this.title}}</h2>
+                    <p>Bill type: {{this.type}}</p>
+                    <p>Bill description: {{this.description}}</p>
+                    <p>Amount due: ${{this.amount}}</p>
+                    <p>This bill is due on: {{this.due_date}}</p>
+                </div>
+                <div class="mt-3 text-center">
+                    <button type="submit" class="submitButton"><a href="/bills/{{this._id}}">Update bill</a></button>
+                </div>
             </div>
             {{/each}}
 </div>
