Updated user and bill schemas for better validation

--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,9 +1,13 @@
 <div class="row justify-content-center">
     <div class="login-up-form col-sm-4">
         <form action="/signup" method="post" id="signupform">
+        <div class="mb-3 mt-3" >
+                <label for="username" class="form-label">Create a Username: </label>
+                <input type="text" class="form-control" name="username" id="username" placeholder="JohnDoe34">
+            </div>
             <div class="mb-3 mt-3" >
-                <label for="username" class="form-label">Enter your email: </label>
-                <input type="text" class="form-control" name="username" id="username" placeholder="johndoe@example.com">
+                <label for="email" class="form-label">Enter your email: </label>
+                <input type="text" class="form-control" name="email" id="email" placeholder="johndoe@example.com">
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Enter a password: </label>
