updated user controllers to a more modern structure

--- a/views/createBill.hbs
+++ b/views/createBill.hbs
@@ -23,8 +23,8 @@
                 <input type="number" class="form-control" name="amount" id="amount" placeholder="1,200">
             </div>
             <div class="mb-3">
-                <label for="due_date" class="form-label">Full Payment Due Date</label>
-                <input type="date" class="form-control" name="due_date" id="due_date">
+                <label for="dueDate" class="form-label">Full Payment Due Date</label>
+                <input type="date" class="form-control" name="dueDate" id="dueDate">
                 
             </div>
             <div class="mb-3 text-center">
