added some styling for input forms and removed email requirement from model and forms for now

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -67,3 +67,8 @@ body {
 .paytrackFooter {
     color: #000000;
 }
+
+/* public/css/style.css */
+.italic-placeholder::placeholder {
+  font-style: italic;
+}
