--- a/views/createBill.hbs
+++ b/views/createBill.hbs
@@ -3,7 +3,7 @@
         <form action="/create" method="post" id="billform">
             <div class="mb-3 mt-3">
                 <label for="title" class="form-label">Name of the bill:</label>
-                <input type="text" class="form-control" name="title" id="title" placeholder="Best Buy Credit Card">
+                <input type="text" class="form-control italic-placeholder" name="title" id="title" placeholder="'Best Buy Credit Card'">
             </div>
             <div class="mb-3">
                 <label for="type" class="form-label">Bill type:</label>
@@ -16,11 +16,11 @@
             </div>
             <div class="mb-3">
                 <label for="description" class="form-label">Bill Desription: </label>
-                <input type="text" class="form-control" name="description" id="description" placeholder="Credit card bill from laptop purchase at best buy">
+                <input type="text" class="form-control italic-placeholder" name="description" id="description" placeholder="'Credit card bill from laptop purchase at best buy'">
             </div>
             <div class="mb-3">
                 <label for="amount" class="form-label">Bill Amount: $</label>
-                <input type="number" class="form-control" name="amount" id="amount" placeholder="1,200">
+                <input type="number" class="form-control italic-placeholder" name="amount" id="amount" placeholder="'1,200'">
             </div>
             <div class="mb-3">
                 <label for="dueDate" class="form-label">Full Payment Due Date</label>
