--- a/views/allBills.hbs
+++ b/views/allBills.hbs
@@ -1,23 +1,29 @@
-<div class="row">
-    {{!-- <a href="#">Send a reminder with your bills!</a> --}}
-    <h3 class="col-3">Filter by:</h3>
-    <a class="nav-link col-2 btn btn-outline-dark" href="/sortedbills">Highest Bill Amount to Lowest</a>
-    <a class="nav-link col-2 btn btn-outline-dark" href="/creditbills">Credit Card Bills</a>
-    <a class="nav-link col-2 btn btn-outline-dark" href="/personalbills">Personal Loan Bills</a>
-</div>
-<div class="row text-center">
-    {{#each data}}
-    <div class="col-6 login-up-form mt-3">
-        <div class="mt-3">
-            <h2>{{this.title}}</h2>
-            <p>Bill type: {{this.type}}</p>
-            <p>Bill description: {{this.description}}</p>
-            <p>Amount due: ${{this.amount}}</p>
-            <p>This bill is due on: {{this.due_date}}</p>
-        </div>
-        <div class="mt-3 text-center">
-            <button type="submit" class="submitButton"><a href="/bills/{{this._id}}">Update bill</a></button>
-        </div>
+{{#if data}}
+    <div class="row">
+        {{!-- <a href="#">Send a reminder with your bills!</a> --}}
+        <h3 class="col-3">Filter by:</h3>
+        <a class="nav-link col-2 btn btn-outline-dark" href="/sortedbills">Highest Bill Amount to Lowest</a>
+        <a class="nav-link col-2 btn btn-outline-dark" href="/creditbills">Credit Card Bills</a>
+        <a class="nav-link col-2 btn btn-outline-dark" href="/personalbills">Personal Loan Bills</a>
     </div>
+    <div class="row text-center">
+    {{#each data}}
+        <div class="col-6 login-up-form mt-3">
+            <div class="mt-3">
+                <h2>{{this.title}}</h2>
+                <p>Bill type: {{this.type}}</p>
+                <p>Bill description: {{this.description}}</p>
+                <p>Amount due: ${{this.amount}}</p>
+                <p>This bill is due on: {{this.due_date}}</p>
+            </div>
+            <div class="mt-3 text-center">
+                <button type="submit" class="submitButton"><a href="/bills/{{this._id}}">Update bill</a></button>
+            </div>
+        </div>
     {{/each}}
+{{else}}
+    <div class="text-center mt-5 pt-5">
+        <h2>There are no bills at this time.</h2>
+    </div>  
+{{/if}}
 </div>
