--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,12 +2,12 @@
     <div class="login-up-form col-sm-4">
         <form action="/login" method="post" id="loginform">
             <div class="mb-3 mt-3">
-                <label for="username" class="form-label">Enter your email: </label>
-                <input type="text" class="form-control" name="username" id="username" placeholder="Username">
+                <label for="username" class="form-label">Enter your username: </label>
+                <input type="text" class="form-control italic-placeholder" name="username" id="username" placeholder="'Username'">
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Enter your password: </label>
-                <input type="password" class="form-control" name="password" id="password" placeholder="Password">
+                <input type="password" class="form-control italic-placeholder" name="password" id="password" placeholder="'Password'">
             </div>
             <div class="mb-3 text-center">
                 <button type="submit" class="submitButton mt-3">Log In</button>
