--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,7 +1,7 @@
 <div class="container">
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
-      <span class="paytrackFooter">© 2021 PayOnTrack</span>
+      ©<script>document.write(new Date().getFullYear())</script> Pay-On-Track
     </div>
   </footer>
 </div>
